# my_projects

./: .dockerignore  .gitignore  Caddyfile  DEPLOY_INSTRUCTION.md  PRD.md  README.md  config.db  docker-compose.txt  docker-compose.yml  main.py  progress.txt  pyproject.toml  ralph.sh  send_signal.py  send_test_signal.py  setup_server.sh  tasks.json  test_bybit.py  СТРАТА MR LAST_без TF.txt
.gemini/: settings.json
app/api/: config.py  status.py  webhook.py
app/core/: logging_config.py  settings.py
app/db/: models.py
app/models/: config.py
app/services/: config_service.py  exchange_service.py  smart_sync_service.py  telegram_service.py  trade_service.py
app/static/: index.html
bot/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
bot/.gemini/agents/: architect.md
bot/app/: tradingview_alerts.pine  tradingview_test_strategy.pine
bot/app/api/: config.py  status.py  webhook.py
bot/app/core/: security.py
bot/app/db/: session.py
bot/app/models/: config.py  webhook_signal.py
bot/app/services/: bybit_service.py  exchange_service.py  smart_sync_service.py  telegram_service.py  trade_service.py
bot/tests/: conftest.py  test_config_models.py  test_config_service.py  test_logging.py  test_pine_json_format.py  test_smart_sync_service.py  test_telegram_service.py  test_trade_service.py  test_webapp.py  test_webhook_signal.py
tests/: test_api_webhook.py  test_bybit_service.py  test_config_models.py  test_config_service.py  test_smart_sync_service.py  test_telegram_service.py  test_webapp.py
