[project]
name = "test-auto-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.25.0",
    "aiosqlite>=0.22.1",
    "ccxt>=4.5.40",
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "pybit>=5.14.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.41.0",
]
